# CopSight

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  API-DOCS.md  ARCHITECTURE-DIAGRAM.md  COMPLETE_USER_GUIDE.md  CONTRIBUTING.md  CopSight_Synopsis.md  DATA-FLOW-DIAGRAM.md  DEMO_GUIDE.md  DEPLOYMENT.md  FORENSIC_ML_BLUEPRINT.md  Makefile  OLLAMA-SETUP.md  PROJECT-COMPLETE.md  QUICK-START.md  README.md  START-ALL.sh  USE-CASE-DIAGRAM.md  USER_GUIDE.md  docker-compose.yml  forensixd.spec  forensixd.yaml  how_it_works.sh  pitch_script.sh  pyproject.toml  pyrightconfig.json  rename-project.bat  reset_all_databases_preserve_admin.sh  reset_data_keep_auth_logs.sh  start-system.bat  start-system.sh  test_readline.py
.github/workflows/: build.yml  deploy-ai-service.yml
CopSight-react/: .env example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
CopSight-react/src/: App.tsx  index.css
ai-service/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyrightconfig.json  requirements.txt  test_db.py  verify_anomaly.py
ai-service/app/: main.py  (+2 more)
backend-node/: .env.example  Dockerfile  README.md  cleanup.js  fix_tables.js  package-lock.json  package.json  reset_admin_password.js  scratch-test.js
forensixd/: cli.py  constants.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
sample-data/: README.md  dummy_ufdr.json  sample_cellebrite_advanced.xml  sample_cellebrite_report.xml  sample_investigation_data.json  sample_network_analysis.json  sample_test_queries.json  sample_ufdr_data.json
(+287 files in other folders)
