[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forensixd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.9.0",
    "pycryptodome>=3.20.0",
    "construct>=2.10.70",
    "lxml>=5.1.0",
    "jinja2>=3.1.3",
    "weasyprint>=62.3",
    "tqdm>=4.66.0",
    "humanize>=4.9.0",
    "pyusb>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-PyYAML",
    "pre-commit>=3.6.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
forensixd = "forensixd.cli:main"
